<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tineshia.outout.MapsActivity"
    >


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="0dp">


        <android.support.v7.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:orientation="horizontal"
            android:padding="0dp">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/settingsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:drawableLeft="@drawable/ic_back_arrow"
                android:drawableStart="@drawable/ic_back_arrow"
                android:text="@string/outout_settings"
                android:textColor="#181818"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </android.support.v7.widget.Toolbar>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="0dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/notifications"
                android:textColor="#181818"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#ffffff"
                android:orientation="horizontal"
                android:padding="0dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="250dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="60dp"
                    android:layout_marginTop="15dp"
                    android:text="@string/daily_alerts"
                    android:textColor="#4d4d4d"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.SwitchCompat
                    android:id="@+id/switch_compat"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:checked="true"
                    android:textOff="@string/switch_setting_off"
                    android:textOn="@string/switch_setting_on"
                    android:visibility="visible"
                    app:showText="false"
                     />

            </android.support.v7.widget.LinearLayoutCompat>

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:background="#1d1d1d" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:paddingTop="0dp"
                android:paddingBottom="0dp"
                android:text="@string/edit_my_profile"
                android:drawableRight="@drawable/ic_front_arrow"
                android:drawableEnd="@drawable/ic_front_arrow"
                android:textColor="#181818"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatImageView
                android:layout_width="350dp"
                android:layout_height="1dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="9dp"
                android:background="#1d1d1d" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:text="@string/app_info"
            android:textColor="#181818"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/description"
                android:textColor="#4d4d4d"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/outout_description"
                android:textColor="#4d4d4d"
                android:textSize="15sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:text="@string/application_version"
                android:textColor="#4d4d4d"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/app_version_number"
                android:textColor="#4d4d4d"
                android:textSize="17sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonLogout"
                android:layout_width="340dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="#00efdd"
                android:gravity="center"
                android:textSize="16sp"
                android:textColor="#181818"
                android:text="@string/logout"
                />

        </android.support.v7.widget.LinearLayoutCompat>

    </android.support.v7.widget.LinearLayoutCompat>


</android.support.constraint.ConstraintLayout>