<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nestedScrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.tineshia.outout.MapsActivity"
    >


    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:orientation="vertical"
        android:padding="0dp">


            <android.support.v7.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00efdd"
                android:orientation="horizontal"
                android:padding="0dp">

                <android.support.v7.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginLeft="5dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:drawableLeft="@drawable/ic_back_arrow"
                    android:drawableStart="@drawable/ic_back_arrow"
                    android:text="@string/edit_your_profile"
                    android:textColor="#181818"
                    android:textSize="25sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </android.support.v7.widget.LinearLayoutCompat>


        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#ffffff"
            android:orientation="vertical"
            android:padding="0dp">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/account_management"
                android:textColor="#181818"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutName"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextName"
                    android:layout_width="340dp"
                    android:layout_height="30dp"
                    android:background="@drawable/edit_profile_text_field"
                    android:drawableLeft="@drawable/ic_user_black"
                    android:drawableStart="@drawable/ic_user_black"
                    android:hint="@string/hint_name"
                    android:inputType="text"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="#181818" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutEmail"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextEmail"
                    android:layout_width="340dp"
                    android:layout_height="30dp"
                    android:hint="@string/hint_email"
                    android:inputType="text"
                    android:background="@drawable/edit_profile_text_field"
                    android:drawableLeft="@drawable/ic_mail_black"
                    android:drawableStart="@drawable/ic_mail_black"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="#181818" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/textInputLayoutPassword"
                android:layout_width="340dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/textInputEditTextPassword"
                    android:layout_width="340dp"
                    android:layout_height="30dp"
                    android:hint="@string/hint_password"
                    android:inputType="textPassword"
                    android:background="@drawable/edit_profile_text_field"
                    android:drawableLeft="@drawable/ic_lock_black"
                    android:drawableStart="@drawable/ic_lock_black"
                    android:maxLines="1"
                    android:textSize="14sp"
                    android:textColor="#181818" />
            </android.support.design.widget.TextInputLayout>


            <android.support.v7.widget.AppCompatButton
                android:id="@+id/appCompatButtonRegister"
                android:layout_width="340dp"
                android:layout_height="35dp"
                android:layout_marginTop="20dp"
                android:layout_gravity="center"
                android:background="#00efdd"
                android:gravity="center"
                android:textSize="18sp"
                android:textColor="#181818"
                android:text="@string/update_credentials"
                />

        </android.support.v7.widget.LinearLayoutCompat>

        </android.support.v7.widget.LinearLayoutCompat>


</android.support.constraint.ConstraintLayout>